overflow fix

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,8 @@
+body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .text-center {
     text-align: center;
 }
